Added Authentication with Swagger

--- a/FundooApplication/appsettings.json
+++ b/FundooApplication/appsettings.json
@@ -9,5 +9,12 @@
   "ConnectionString": {
     "FundooDB": "data source=DESKTOP-P0R3A5V; database=FundooDB; integrated security=true;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "jwt": {
+    "key": "qwertyuiopasdfghjklzxcvbnmqwertyuiopasdfghjklmnbvcxzaqwer",
+    "Issuer": "https://localhost:44371"
+
+
+  }
+
 }
